--- a/OsnovnaSkola/AuthTesting/packages.config
+++ b/OsnovnaSkola/AuthTesting/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="1.0.0-rc1-final" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.0-rc1-final" targetFramework="net472" />
@@ -12,7 +13,12 @@
   <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net472" />
   <package id="Microsoft.Extensions.PlatformAbstractions" version="1.0.0-rc1-final" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="1.0.0-rc1-final" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
