updates to database to develop curriculum implementation

--- a/OsnovnaSkola/OsnovnaSkolaUI/OsnovnaSkolaUI.csproj
+++ b/OsnovnaSkola/OsnovnaSkolaUI/OsnovnaSkolaUI.csproj
@@ -91,6 +91,7 @@
     <Compile Include="ViewModel\OblastiPredmetaViewModel.cs" />
     <Compile Include="ViewModel\OblastUcioniceViewModel.cs" />
     <Compile Include="ViewModel\OceniRadoveViewModel.cs" />
+    <Compile Include="ViewModel\RasporedCasovaViewModel.cs" />
     <Compile Include="ViewModel\UcenikOdeljenjeViewModel.cs" />
     <Compile Include="ViewModel\ZaposleniPredmetViewModel.cs" />
     <Compile Include="Views\AddCasWindow.xaml.cs">
@@ -140,6 +141,9 @@
     </Compile>
     <Compile Include="Views\PasswordChangeWindow.xaml.cs">
       <DependentUpon>PasswordChangeWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RasporedCasovaWindow.xaml.cs">
+      <DependentUpon>RasporedCasovaWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UcenikOdeljenjeWindow.xaml.cs">
       <DependentUpon>UcenikOdeljenjeWindow.xaml</DependentUpon>
@@ -220,6 +224,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\PasswordChangeWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\RasporedCasovaWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
