--- a/OsnovnaSkola/OsnovnaSkolaUI/OsnovnaSkolaUI.csproj
+++ b/OsnovnaSkola/OsnovnaSkolaUI/OsnovnaSkolaUI.csproj
@@ -91,6 +91,7 @@
     <Compile Include="ViewModel\OblastiPredmetaViewModel.cs" />
     <Compile Include="ViewModel\OblastUcioniceViewModel.cs" />
     <Compile Include="ViewModel\OceniRadoveViewModel.cs" />
+    <Compile Include="ViewModel\PrisustvaViewModel.cs" />
     <Compile Include="ViewModel\RasporedCasovaViewModel.cs" />
     <Compile Include="ViewModel\UcenikOdeljenjeViewModel.cs" />
     <Compile Include="ViewModel\ZaposleniPredmetViewModel.cs" />
@@ -141,6 +142,9 @@
     </Compile>
     <Compile Include="Views\PasswordChangeWindow.xaml.cs">
       <DependentUpon>PasswordChangeWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PrisustvaWindow.xaml.cs">
+      <DependentUpon>PrisustvaWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RasporedCasovaWindow.xaml.cs">
       <DependentUpon>RasporedCasovaWindow.xaml</DependentUpon>
@@ -224,6 +228,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\PasswordChangeWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\PrisustvaWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
